<resources>
    <string name="app_name">Health-BRO</string>

    <string name="introNew">Welcome To \n HEALTH BLOG</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="welcome_to_photo_blog">Welcome To \nPHOTO BLOG</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="create_new_accounth">Create new Account?</string>
    <string name="log_in">Log In</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="save_account_settings">Save Account Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jan_20_2018">Jan 20, 2018</string>
    <string name="username">Username</string>
    <string name="comments">Comments:</string>
    <string name="enter_your_comment">Enter your comment....</string>
    <string name="open_account_setup">Open Account Setup</string>
    <string name="acccount_fragment">Acccount Fragment</string>
    <string name="add_description">Add Description....</string>
    <string name="add_post">Add Post</string>
    <string name="delete_account">Delete Account</string>
    <string name="your_topics">Your Topics</string>
    <string name="contact">Contact</string>
    <string name="doctorname">DoctorName</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="speciality">Speciality</string>
    <string name="topicname">TopicName</string>
    <string name="topic">Topic:</string>
</resources>
