<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contactProfilePic"
                android:layout_width="120dp"
                android:layout_height="104dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/profile_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/contactUsername"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/contactUsername"
                android:layout_width="317dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/acme"
                android:text="@string/doctorname"
                android:textColor="#2a2929"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/SpecialityIndicator"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:text="Speciality:"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactUsername"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/Speciality"
                android:layout_width="165dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/speciality"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintStart_toEndOf="@+id/SpecialityIndicator"
                app:layout_constraintTop_toBottomOf="@+id/contactUsername"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/contactTextMessage"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="Contact Number:"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SpecialityIndicator"
                app:layout_constraintVertical_bias="0." />

            <TextView
                android:id="@+id/contactNumber"
                android:layout_width="141dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/contact_number"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.055"
                app:layout_constraintStart_toEndOf="@+id/contactTextMessage"
                app:layout_constraintTop_toBottomOf="@+id/SpecialityIndicator"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/addressIndication"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:text="Address:"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactNumber"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/address"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addressIndication"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/Dial_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.671"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactNumber"
                app:layout_constraintVertical_bias="0.125"
                app:srcCompat="@drawable/baseline_contact_phone_black_18" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>